# polars_splitters

./: .gitignore  README.md  pyproject.dev.toml  pyproject.toml  requirements.txt
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
polars_splitters/: __init__.py
polars_splitters/core/: splitters.py
polars_splitters/utils/: decorators.py  guardrails.py  type_enforcers.py  validators.py  wrapping_helpers.py
src/polars_splitters/: __init__.py
src/random_split/core/: splitters.py
tests/unit/: conftest.py  test_splitters.py  test_tests_utils.py
tests/utils/: data_generators.py
