[tool.poetry]
name = "polars_splitters"
version = "0.1.2"
description = "Polars-based splitter functionalities for polars LazyFrames and DataFrames similar to `sklearn.model_selection.train_test_split` and `sklearn.model_selection.StratifiedKFold`."
authors = ["Jonas M. Miguel <charter-shushes0n@icloud.com>"]
readme = "README.md"
packages = [{ include = "polars_splitters" }]

[tool.poetry.dependencies]
python = ">=3.10.9, <4.0"
polars = "^0.19.3"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-check = "^2.2.2"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
